<resources>
    <string name="app_name">OWF</string>
    <string name="sending">Sending</string>
    <string name="instruction_view_description">Depiction of next state</string>
    <string name="crop_view_description">Latest crop from object detector</string>
    <string name="goal">Goal:</string>
    <string name="your_progress">Your Progress:</string>
    <string name="call_expert">Call Expert</string>
    <string name="end_call">End Call</string>
</resources>