<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/instructionVideo"
        android:layout_width="154dp"
        android:layout_height="123dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/instruction_view_description"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/viewFinder"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_progress"
        app:layout_constraintBottom_toBottomOf="@+id/cropView"
        app:layout_constraintEnd_toStartOf="@+id/cropView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cropView"
        app:layout_constraintVertical_bias="0.48" />

    <ImageView
        android:id="@+id/instructionImage"
        android:layout_width="154dp"
        android:layout_height="123dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/instruction_view_description"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/viewFinder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        app:layout_constraintBottom_toBottomOf="@+id/instructionImage"
        app:layout_constraintEnd_toStartOf="@+id/instructionImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/instructionImage"
        app:layout_constraintVertical_bias="0.519" />

    <ImageView
        android:id="@+id/cropView"
        android:layout_width="154dp"
        android:layout_height="123dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/crop_view_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewFinder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="366dp"
        android:layout_height="352dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="startZoom"
        android:text="@string/call_expert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>